--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -18,7 +18,7 @@ dataSources:
       entities:
         - Event
         - Field
-        - Array
+        - ArrayField
         - Item
       abis:
         - name: Reserve
